<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/eyeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/eye"/>

    <Button
        android:id="@+id/formulaButton"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="20pt"
        android:layout_below="@id/eyeImage"
        android:textColor="#fff"
        android:background="#66bb6a"
        android:textSize="40px"
        android:layout_centerHorizontal="true"
        android:text="@string/formula"/>

    <Button
        android:id="@+id/equationButton"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_below="@id/formulaButton"
        android:layout_marginTop="10pt"
        android:textColor="#fff"
        android:background="#66bb6a"
        android:textSize="40px"
        android:layout_centerHorizontal="true"
        android:text="@string/equation"/>

    <Button
        android:id="@+id/sudokuButton"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_below="@id/formulaButton"
        android:layout_marginTop="10pt"
        android:textColor="#fff"
        android:background="#66bb6a"
        android:textSize="40px"
        android:layout_centerHorizontal="true"
        android:text="@string/su_do_ku"
        android:visibility="invisible"/>

</RelativeLayout>
