<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <ListView
        android:id="@+id/equationList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_below="@id/equationList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textColor="#fff"
            android:background="#66bb6a"
            android:textSize="40px"
            android:layout_marginTop="20dp"
            android:text="@string/add_button"/>

        <Button
            android:id="@+id/ackButton"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textColor="#fff"
            android:background="#66bb6a"
            android:textSize="40px"
            android:layout_marginTop="20dp"
            android:text="@string/ack_button"/>

        <Button
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textColor="#fff"
            android:background="#66bb6a"
            android:textSize="40px"
            android:layout_marginTop="20dp"
            android:text="@string/retry_button"/>

        <TextView
            android:id="@+id/ans"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textColor="#000"
            android:textSize="50px"
            android:gravity="center"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waitLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:alpha="0.8"
        android:orientation="horizontal"/>

    <ProgressBar
        android:id="@+id/waitbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/dialog"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:textColor="#fff"
            android:background="#66bb6a"
            android:textSize="40px"
            android:layout_marginTop="20dp"
            android:text="@string/return_button"/>

    </LinearLayout>


</RelativeLayout>